--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 }
 .read-more-btn {
   display: inline-block;
-  background-color: #22c55e; /* Green */
+  background-color: #e87917; /* Green */
   color: white;
   font-size: 14px;
   padding: 6px 14px; /* Small padding */
